--- a/package.json
+++ b/package.json
@@ -25,8 +25,37 @@
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.1.4",
-    "@glimmer/component": "^1.0.3",
+    "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.0.3",
+    "@glint/core": "^0.9.1",
+    "@glint/environment-ember-loose": "^0.9.1",
+    "@types/ember__application": "^4.0.1",
+    "@types/ember__array": "^4.0.1",
+    "@types/ember__component": "^4.0.8",
+    "@types/ember__controller": "^4.0.0",
+    "@types/ember__debug": "^4.0.1",
+    "@types/ember__engine": "^4.0.1",
+    "@types/ember__error": "^4.0.0",
+    "@types/ember__object": "^4.0.3",
+    "@types/ember__polyfills": "^4.0.0",
+    "@types/ember__routing": "^4.0.9",
+    "@types/ember__runloop": "^4.0.1",
+    "@types/ember__service": "^4.0.0",
+    "@types/ember__string": "^3.0.9",
+    "@types/ember__template": "^4.0.0",
+    "@types/ember__test": "^4.0.0",
+    "@types/ember__test-helpers": "^2.8.1",
+    "@types/ember__utils": "^4.0.0",
+    "@types/ember-data": "^4.4.0",
+    "@types/ember-data__adapter": "^4.0.0",
+    "@types/ember-data__model": "^4.0.0",
+    "@types/ember-data__serializer": "^4.0.0",
+    "@types/ember-data__store": "^4.0.0",
+    "@types/ember-qunit": "^5.0.0",
+    "@types/ember-resolver": "^5.0.11",
+    "@types/htmlbars-inline-precompile": "^3.0.0",
+    "@types/qunit": "^2.19.2",
+    "@types/rsvp": "^4.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.10.1",
@@ -34,15 +63,18 @@
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.23.0",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.3.1",
+    "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
+    "ember-cli-typescript": "^5.1.0",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-data": "~3.24.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modifier": "^3.2.7",
     "ember-page-title": "^6.0.3",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
@@ -58,7 +90,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "qunit": "^2.13.0",
-    "qunit-dom": "^1.6.0"
+    "qunit-dom": "^1.6.0",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": "10.* || >= 12"
